# MyOnsiteHealthCareHackathonProject

./: .gitignore  .vercelignore  Dockerfile  clusters.json  destination.json  production_metadata.json  pyproject.toml  requirements.txt  route_generator.py  source.json  vercel.json
api/: index.py
services/: geoclustering.py  sm.jason  test.py
visualization/: main.py
