[tool.poetry]
name = "my-onsite-healthcare-api"
version = "0.1.0"
description = "FastAPI-based ML backend for healthcare hackathon"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^=3.11"

# Core API
fastapi = "0.111.0"
uvicorn = "0.30.1"
gunicorn = "22.0.0"
pydantic = "2.8.2"

# Data Processing & ML
pandas = ">=2.2.2"
numpy = "1.26"
scikit-learn = "1.4.2"
geopy = "2.4.1"
scipy = "^1.11"


# Other
requests = "2.32.3"

#[tool.poetry.dependencies.pymongo]
#version = "4.8.0"
#optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
